# WikipediaSearch

./: CMakeLists.txt  README.md  compile.sh  main.cpp
data/AsciiAbba/: .gitignore  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt
data/stopwords/: etc.txt
scripts/: .execute-words.sh.swp  execute-index-block.sh  execute-index.sh  execute-search.sh  execute-words.sh
src/: CMakeLists.txt  main.cpp
src/indexing/: CMakeLists.txt  MaxKHeap.h  UtilityFiles.h  indexing.cpp  indexingblocks.cpp
src/indexing-block/: CMakeLists.txt  MaxKHeap.h  indexingblocks.cpp
src/preprocessing/: capturar-diccionario-letras.py  conta-palabras.cc  create-graph.py  execution-of-index.txt  run_html2text.cc  transform-dictionary.txt  transform-to-ascii.py  utilities.h
src/search/: CMakeLists.txt  search.cpp
src/utils/: KMP.h  UtilityFiles.h
src/words/: CMakeLists.txt  UtilityFiles.h  words.cpp
test/: CMakeLists.txt  test.cpp
